--- a/public/css/style.css
+++ b/public/css/style.css
@@ -448,6 +448,17 @@
 /**********************************************************************/
 
 
+/*------------------- BLOCK DETAILS --------------------*/
+.fil {
+	margin-top: 90px;
+	font-size: 12px;
+
+}
+
+
+
+
+
 
 /*------------------- BLOCK COMMENTAIRES --------------------*/
 
