mise en forme form inscription

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -448,19 +448,28 @@
 /**********************************************************************/
 
 
-/*------------------- BLOCK DETAILS --------------------*/
+
+
+
+
+/**********************************************************************/
+/*--------------------------- BLOCK DETAILS --------------------------*/
+
 .fil {
 	margin-top: 90px;
 	font-size: 12px;
 
 }
 
+/*--------------------------- BLOCK DETAILS --------------------------*/
+/**********************************************************************/
 
 
 
 
 
-/*------------------- BLOCK COMMENTAIRES --------------------*/
+/**********************************************************************/
+/*------------------------- BLOCK COMMENTAIRES -----------------------*/
 
 .chatTitleContainer {
   
@@ -711,3 +720,23 @@ font-weight: bold;
 
     
 }
+
+
+/*------------------------- BLOCK COMMENTAIRES -----------------------*/
+/**********************************************************************/
+
+
+
+
+
+/**********************************************************************/
+/*-------------------------- BLOCK INSCRIPTION -----------------------*/
+
+
+	.bg-inscription {
+
+	}
+
+
+/*-------------------------- BLOCK INSCRIPTION -----------------------*/
+/**********************************************************************/
