--- a/templates/admin/signalerCommentaire.html.twig
+++ b/templates/admin/signalerCommentaire.html.twig
@@ -4,7 +4,7 @@
 <section class="form-elegant container margin-top">
 
 Merci {{ app.user.username}} ! <br>
-Le commentaire a été signalé, il va etre étudié par nos equipes de modération
+Le commentaire a été signalé, il va être étudié par nos équipes de modération
 </section>
 
 {% endblock %}
