--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,30 +2,56 @@
 
 {% block main %}
 
-    <section class="container margin-top">
+<div class="view img-banner bg-connexion hm-teal-light">
+    <div class="mask pattern-5 flex-center"></div>
+</div>
 
-        {% if error %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+<section class="container">
 
-        <form action="{{ path('login_check') }}" method="post">
+    <div class="offset-sm-1 col-sm-10 offset-lg-3 col-lg-6 position-relative relative-inscription-connexion">
+        <div class="card">
 
-            <div class="md-form">
-                <i class="fa fa-user prefix grey-text"></i>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control"/>
-                <label for="username">Pseudo</label>
+            <div class="card-body">
+
+                <h2 class="h2-responsive mb-4 text-center">Connexion</h2>
+
+                {% if error %}
+                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
+
+                <form action="{{ path('login_check') }}" method="post">
+
+                    <div class="md-form">
+                        <i class="fa fa-user prefix plusun-color"></i>
+                        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control"/>
+                        <label for="username">Pseudo</label>
+                    </div>
+                    <div class="md-form">
+                        <i class="fa fa-lock prefix plusun-color" aria-hidden="true"></i>
+                        <input type="password" id="password" name="_password" class="form-control"/>
+                        <label for="password">Mot de passe</label>
+                    </div>
+
+                    <input type="hidden" name="_target_path" value="/profil" />
+
+                    <div class="text-center">
+                        <button class="btn btn-plusun" type="submit">Se connecter <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                    </div>
+
+                </form>
+
             </div>
-            <div class="md-form">
-                <i class="fa fa-envelope prefix grey-text"></i>
-                <input type="password" id="password" name="_password" class="form-control"/>
-                <label for="password">Mot de passe</label>
+
+            <div class="card-footer pt-0 pb-0 gradient-yellow-plusun">
+
+                <div class="d-flex justify-content-end align-items-center evenement-bg p-3">
+                    <p class="font-small text-white d-flex justify-content-end mb-0">Pas de compte ?<a href="{{ path('inscription') }}" class="plusun-color ml-1"> Inscrivez-vous !</a></p>
+                </div>
+
             </div>
-
-            <input type="hidden" name="_target_path" value="/profil" />
-
-            <button class="btn btn-primary" type="submit">Se connecter</button>
-        </form>
-    </section>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
 
