--- a/templates/sitepublic/listeParticipe.html.twig
+++ b/templates/sitepublic/listeParticipe.html.twig
@@ -1,15 +1,37 @@
+{% if participeAucun %}
+	<div class="">Vous ne participez à aucun événement pour le moment !</div>
+{% endif %}
 
-		{% if participeAucun %}
-			Vous ne participez à aucun événement pour le moment !<br>
-		{% endif %}
-		{% if not participeAucun %}
-		Vous participez à : {{ participeNombre }} événements !<br>
+{% if not participeAucun %}
+	<div class="">Vous participez à : {{ participeNombre }} événements !</div>
+
+	<div class="table-reponsive">
+		
+		<table class="table product-table">
+			<thead>
+				<th>Événement</th>					
+				<th>Action</th>
+			</thead>
 
 			{% for participant in participants %}
-				Titre : {{ participant.evenement.titre }}<br>
-				Description : {{ participant.evenement.description }}<br>
-				Le {{ participant.evenement.dateEvenement|date("d/m/Y") }} à {{ participant.evenement.dateEvenement|date("H:i") }}<br>
-				<button class="btn btn-primary" type="submit"><a href="{{ asset('evenements/desinscription/') }}{{ participant.evenement.id }}" class="blue-text ml-1"> Ne plus Participer </a></i></button>
-			{% endfor %}
-		{% endif %}
+				<tr>
+					<td>	
+						<h4 class="h4-responsive">{{ participant.evenement.titre }}</h4>
 
+						<p class="small font-italic"><i class="fa fa-quote-left grey-text"></i> {{ participant.evenement.description }}</p>
+
+						<ul class="list-unstyled">
+					    	<li><i class="fa fa-calendar plusun-color" aria-hidden="true"></i> {{ participant.evenement.dateEvenement|date("d/m/Y") }}</li>
+					    	<li><i class="fa fa-clock-o plusun-color" aria-hidden="true"></i> {{ participant.evenement.dateEvenement|date("H:i") }}</li>
+					    	<li><i class="fa fa-map-marker plusun-color" aria-hidden="true"></i> {{ participant.evenement.ville }}</li>
+					    </ul>
+					</td>
+					<td>
+						<a href="{{ asset('evenements/desinscription/') }}{{ participant.evenement.id }}"><span class="badge red px-1">SE DESINSCRIRE <i class="fa fa-times" aria-hidden="true"></i></span></a>
+					</td>
+				</tr>
+			{% endfor %}
+		</table>
+
+	</div>
+{% endif %}
