--- a/templates/sitepublic/listeOrganise.html.twig
+++ b/templates/sitepublic/listeOrganise.html.twig
@@ -2,6 +2,9 @@
 	<div class="">Vous n'avez organisé aucun événement pour le moment</div>
 {% endif %}
 
+{% if not organiseAucun %}
+	<h3 class="h3-responsive">C'est moi qui organise !</h3>
+{% endif %}
 
 <div class="table-reponsive">
 	<table class="table product-table">
@@ -24,7 +27,11 @@
 				    </ul>
 				</td>
 				<td>
-					<a href="{{ asset('profil/annuler/') }}{{ evenement.id }}"><span class="badge red">ANNULER <i class="fa fa-times" aria-hidden="true"></i></span></a>
+					<div class="row">
+						<a class="btn btn-primary btn-sm mb-1" style="width:100%" href="{{ asset('evenements/') }}{{ evenement.id }}">VOIR <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+
+						<a class="btn btn-danger btn-sm mt-1" style="width:100%" href="{{ asset('profil/annuler/') }}{{ evenement.id }}">ANNULER <i class="fa fa-times" aria-hidden="true"></i></a>
+					</div>
 				</td>
 			</tr>
 		{% endfor %}
