--- a/public/css/style.css
+++ b/public/css/style.css
@@ -665,8 +665,9 @@ font-weight: bold;
 
 .comment-avatar img {
 	
-	width: 36px;
-	height: 36px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 	
 }
 
@@ -683,7 +684,7 @@ font-weight: bold;
     
     width: 100%;
     background-color: #fff;
-    font-size: 12px;
+    font-size: 14px;
 	margin: 0;
 	padding: 8px 8px;
 	line-height: 1.5;
