--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -56,7 +56,7 @@
 					{% for participant in participants %}
 						<div class='col-sm-6'>
 						<div class="comment-avatar p-1">
-								<img src="{# {{ asset('img/uploads/user/')}}{{ app.user.photo }} #}">	
+								<img src="{{ asset('img/uploads/user/')}}{{ participant.user.photo }}">	
 						{{ participant.user.username |title }}<br>
 						</div>
 					</div>
@@ -83,9 +83,11 @@
 				<table class="form-comments-table">
 					<tr>
 						<td></td>
-						<td>
-							
-							<div class="comment-user">{{ comment.user.username }}</div>
+						<td class="text-center">
+							<div class="comment-avatar">
+							<img src="{{ asset('img/uploads/user/')}}{{ comment.user.photo }}">	
+							</div>
+							<div class="comment-user">{{ comment.user.username|title }}</div>
 						</td>
 						<td></td>
 						<td>
