--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -1,139 +1,198 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<div class="fil container">Accueil>{{ evenement.ville }}>{{ evenement.sport.categorie.nom }}>{{ evenement.sport.nom }}<br></div>
 
+{# Bannière présente dans l'accueil #}
+<div class="view hm-teal-light banner-detail-evenement">
+	<img src="{{ asset('img/uploads/evenement/')}}{{ evenement.photo }}" class="position-relative">
+	<div class="mask pattern-5 flex-center">
+    </div>
+</div>
 
-<section class="form-elegant container">
-	<div class="gradient-yellow-plusun">
-		<div class="d-flex justify-content-center align-items-center p-2 evenement-bg">
-		<h1>{{ evenement.titre |title }}</h1>
+<section class="container">
+
+	<div class="row">
+		<div class="col-auto">
+	    	<div class="d-inline-flex flex-column align-items-center position-relative avatar-organisateur-detail">
+		    	{# PHOTO PROFIL #}
+		        <div class="avatar avatar-90 d-block z-depth-1">
+		        	<img class="img-avatar" src="http://static4.businessinsider.com/image/56c640526e97c625048b822a-480/donald-trump.jpg">
+		        </div>
+		        {# PSEUDO UTILISATEUR #}
+		        <h5 class="h5-responsive mt-2">{{ evenement.organisateur }}</h5>
+		        <h4 class="h4-responsive"><span class="badge plusun-bg">ORGANISATEUR</span></h4>
+	    	</div>
+		</div>
+		{# TITRE #}
+		<div class="col-auto">
+			<div class="d-flex flex-column p-3">
+				{# TITRE #}
+				<h1 class="h1-responsive">{{ evenement.titre |title }}</h1>
+				{# SPORT ET NIVEAU #}
+				<h6 class="text-right">
+					<span class="badge indigo">{{ evenement.sport.nom }} </span>
+					<span class="badge {{evenement.niveau.nom}} ">{{ evenement.niveau.nom }}</span>
+				</h6>
+			</div>
+		</div>
 	</div>
-	</div>
-	
-		<p class="text-right">
-			<span class="badge indigo">{{ evenement.sport.nom }} </span>
- 			<span class="badge {{evenement.niveau.nom}} ">{{ evenement.niveau.nom }}</span>
-		</p>
-<div class="row">
 
-	<div class='col-md-6'>
-		<ul class="list-group">
-		<li class="list-group-item d-flex justify-content-between align-items-center">Organisé par {{ evenement.organisateur }}</li>
-		<li class="list-group-item d-flex justify-content-between align-items-center">Description :<br>
-		 {{ evenement.description }}</li>
-		
-				<li class="list-group-item d-flex justify-content-between align-items-center"><i class="fa fa-calendar plusun-color" aria-hidden="true"></i> {{ evenement.dateEvenement|date("d/m/Y") }}</li>
-			<li class="list-group-item d-flex justify-content-between align-items-center"><i class="fa fa-clock-o plusun-color" aria-hidden="true"></i> {{ evenement.dateEvenement|date("H:i") }}</li>
-			<li class="list-group-item d-flex justify-content-between align-items-center"><i class="fa fa-map-marker plusun-color" aria-hidden="true"></i> {{ evenement.ville }}</li>
-			<li class="list-group-item d-flex justify-content-between align-items-center"><i class="fa fa-child  plusun-color" aria-hidden="true"></i> Participants : {{ nombre }} / {{ evenement.participantMax }}<br></li>
-		
-		{% if dejaInscrit %}
-					<a class="btn btn-plusun btn-lg btn-block" type="button" href="{{ asset('evenements/desinscription/') }}{{ evenement.id }}"> Ne plus participer </a></i></button>
+
+	<div class="row">
+
+		<div class='col-md-6'>
+
+			<div class="row">
+
+				{# DESCRIPTION #}
+				<div class="col-md-6">
+					<p class="small font-italic"><i class="fa fa-quote-left grey-text"></i> {{ evenement.description }}</p>
+				</div>
+
+				{# DATE LIEU HEURE #}
+		    	<div class="col-md-6 d-flex flex-column align-items-baseline">
+		    		<ul class="list-unstyled d-flex flex-column align-items-baseline">
+			        	<li><i class="fa fa-calendar plusun-color" aria-hidden="true"></i> {{ evenement.dateEvenement|date("d/m/Y") }}</li>
+			        	<li><i class="fa fa-clock-o plusun-color" aria-hidden="true"></i> {{ evenement.dateEvenement|date("H:i") }}</li>
+			        	<li><i class="fa fa-map-marker plusun-color" aria-hidden="true"></i> {{ evenement.ville }}</li>
+			        </ul>
+		    	</div>
+
+			</div>
+
+		</div>
+
+		<div class='col-md-6'>
+
+			<ul class="list-group">
+
+				{% if dejaInscrit %}
+					<h4 class="h4-responsive mb-3"><i class="fa fa-child  plusun-color" aria-hidden="true"></i> Participants : {{ nombre }} / {{ evenement.participantMax }}</i></h4>
+					<a class="btn btn-plusun btn-lg btn-block" type="button" href="{{ asset('evenements/desinscription/') }}{{ evenement.id }}"> Ne plus participer </a></i>
 				{% endif %}
-			{% if not dejaInscrit %}
-				{% if not complet %}
+
+				{% if not dejaInscrit %}
+
+					{% if not vide %}
+							<p class="mt-2"><i class="fa fa-child  plusun-color" aria-hidden="true"></i> Participants : {{ nombre }} / {{ evenement.participantMax }}</i></p>
+						{% endif %}
+
+					{% if not complet %}
 						<a class="btn btn-plusun btn-lg btn-block" type="button" href="{{ asset('evenements/inscription/') }}{{ evenement.id }}"> Participer !</a></i>
-				{% endif %}
-			{% endif %}
-		{% if complet %}
-			<li class="list-group-item align-items-center list-group-item-danger">Evénement complet !</li>
-			{% endif %}
-			{% if vide %}
-			<li class="list-group-item d-flex justify-content-between align-items-center">Soyez le premier à participer !</li>
-			{% endif %}
-				</ul>
-	</div>
-				<div class='col-md-6'>
-				<img src="{{ asset('img/uploads/evenement/')}}{{ evenement.photo }}" class="img-fluid">		     
-		
-				
+					{% endif %}
 
+				{% endif %}
+
+				{% if complet %}
+					<li class="list-group-item align-items-center list-group-item-danger">Événement complet !</li>
+				{% endif %}
+
+				{% if vide %}
+					<li class="list-group-item d-flex justify-content-between align-items-center">Soyez le premier à participer !</li>
+				{% endif %}
+
+			</ul>
+		
 			{% if user %}
 				{% if nombre > 0 %}
-					Découvrez la liste des inscrits : <br>
+
+					<h4 class="h4-responsive mt-3 mb-3">Découvrez la liste des inscrits</h4>
+
 					<div class="row">
 					{% for participant in participants %}
-						<div class='col-sm-6'>
-						<div class="comment-avatar p-1">
-							<img src="{{ asset('img/uploads/user/')}}{{ participant.user.photo }}">	
-						{{ participant.user.username |title }}<br>
+						<div class="col-auto mr-1 d-flex flex-column justify-content-between align-items-center">
+							<div class="avatar avatar-45 d-block z-depth-1">
+		        				<img src="{{ asset('img/uploads/user/')}}{{ app.user.photo }}" class="img-avatar">
+		        			</div>
+		        			<span class="mb-1">{{ participant.user.username |title }}</span>
 						</div>
 					</div>
 					{% endfor %}<br>
 				</div>
 				{% endif %}
 			{% endif %}
-</div>
-</div>
+
+		</div>
+
+	</div>
+
 </section>
 
-
+{# COMMENTAIRES #}
 <section class="container">
 
-<div class="chatContainer">
-    <div class="chatTitleContainer">nbre Commentaires</div>
+	<div class="chatContainer">
+	    <div class="chatTitleContainer">nbre Commentaires</div>
 
-    {% if is_granted('ROLE_USER') %}
-	<div class="chatHistoryContainer">
+	    {% if is_granted('ROLE_USER') %}
 
-        <ul class="formComments">
-        	{% for comment in comments %}
-			<li class="commentLi commentstep-1" data-commentid="{{ comment.id }}">
-				<table class="form-comments-table">
-					<tr>
-						<td></td>
-						<td class="text-center">
-							<div class="comment-avatar">
-							<img src="{{ asset('img/uploads/user/')}}{{ comment.user.photo }}">	
-							</div>
-							<div class="comment-user">{{ comment.user.username|title }}</div>
-						</td>
-						<td></td>
-						<td>
-							<div id="comment-{{ comment.id }}" data-commentid="{{ comment.id }}" class="comment comment-step1">
-								<i class="fa fa-flag signal"><a href="{{ asset('sitepublic/evenements/{evenement}/signaler/commentaire/{id}') }}{{ comment.id }}"></a></i>
-								{{ comment.commentaire }}
-								
-								{% if app.user.id == comment.user.id %}
-                                <div id="commentactions-{{ comment.id }}" class="comment-actions">
-                                    <div class="btn-group" role="group" aria-label="...">
-                                       {#  <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> Reply</button> #}
-                                        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-pencil"></i>Edit</button>
-                                        <button type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i><a href="{{ asset('sitepublic/evenements/commentaire/supprimer/{id}') }}{{ comment.id }}">Delete</a></button>
-                                    </div>                                
-                                </div>
-                                {% endif %}
-                            </div>
-                            <div class="comment-timestamp">{{ comment.date|date('d/m/Y H:i:s') }}</div>
-						</td>
-					</tr>
-				</table>
-			</li>  
-           
-			{% endfor %}  
-        </ul>
-	</div>
+	<div class="card">
+
+		<div class="chatHistoryContainer gradient-light">
+
+	        <ul class="formComments">
+	        	{% for comment in comments %}
+					<li class="commentLi commentstep-1" data-commentid="{{ comment.id }}">
+						<table class="form-comments-table">
+							<tr>
+								<td></td>
+								<td>
+									<div class="comment-user">{{ comment.user.username }}</div>
+								</td>
+								<td></td>
+								<td>
+									<div id="comment-{{ comment.id }}" data-commentid="{{ comment.id }}" class="comment comment-step1">
+										<i class="fa fa-flag signal"><a href="{{ asset('sitepublic/evenements/{evenement}/signaler/commentaire/{id}') }}{{ comment.id }}"></a></i>
+										{{ comment.commentaire }}
+										
+										{% if app.user.id == comment.user.id %}
+			                                <div id="commentactions-{{ comment.id }}" class="comment-actions text-right">
+			                                    <div class="btn-group" role="group" aria-label="...">
+			                                       {#  <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i> Reply</button> #}
+			                                        <button type="button" class="btn btn-default btn-sm mr-1"><i class="fa fa-pencil"></i>Modifier</button>
+			                                        <a role="button" class="btn btn-danger btn-sm" href="{{ asset('sitepublic/evenements/commentaire/supprimer/{id}') }}{{ comment.id }}">Effacer <i class="fa fa-trash"></i></a>
+			                                    </div>                                
+			                                </div>
+		                                {% endif %}
+		                            </div>
+		                            <div class="comment-timestamp">{{ comment.date|date('d/m/Y H:i:s') }}</div>
+								</td>
+							</tr>
+						</table>
+					</li>
+				{% endfor %}  
+	        </ul>
+
+		</div>
+	
+
+	{{ form_start(form, {'method': 'POST'}) }}
+		<div class="input-group input-group-sm chatMessageControls">
+		
+	         {{ form_widget(form.commentaire, {'attr': { 'placeholder': 'Votre commentaire ici..', 'id': 'sendMessageForm'}}) }}   
+	        <span class="input-group-btn">
+	        	{{ form_widget(form.envoyer, {'attr': {'class': 'btn btn-plusun', 'type': 'button', 'id': 'sendMessageButton'}}) }}  
+	        </span>
+		
+		</div>
+	{{ form_end(form) }}
+
 </div>
-	</div>	
-{{ form_start(form, {'method': 'POST'}) }}
-	<div class="input-group input-group-sm chatMessageControls">
-	
-         {{ form_widget(form.commentaire, {'attr': { 'placeholder': 'Votre commentaire ici..', 'id': 'sendMessageForm'}}) }}   
-        <span class="input-group-btn">
-        	{{ form_widget(form.envoyer, {'attr': {'class': 'btn btn-plusun', 'type': 'button', 'id': 'sendMessageButton'}}) }}  
-        </span>
-	
-	</div>
-{{ form_end(form) }}
+
+</div>
 
 </section>
-{% else %}
-	<div class="alert alert-info" role="alert">
-  <strong>Hep là!</strong> Pour accéder aux commentaires tu dois te <a href="/connexion" class="alert-link">connecter</a>, ou <a href="/inscription" class="alert-link">t'inscrire</a> (et tu pourras même rejoindre cet évenement! ).
-</div> 
 
-{% endif %}
+	{% else %}
+
+		<div class="alert alert-info" role="alert">
+			<strong>Hep là!</strong> Pour accéder aux commentaires tu dois te <a href="/connexion" class="alert-link">connecter</a>, ou <a href="/inscription" class="alert-link">t'inscrire</a> (et tu pourras même rejoindre cet évenement! ).
+		</div> 
+
+	{% endif %}
+
 {% endblock %}
+
 {% block javascripts %}
-<script type="text/javascript" src="{{ asset('js/main.js') }}"></script>{% endblock %}
+<script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
+{% endblock %}
